<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_biodata"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="208dp"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/fotoKuliah"
                android:layout_width="150dp"
                android:layout_height="208dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/foto_kuliah"
                android:contentDescription="@string/todo" />

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:id="@+id/nim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="NIM : A11.2021.13294"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/nama_septian_ade_hidayat"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/hobi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/hobi_bermain_game_dan_olahraga"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/deskripsiSingkat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/mahasiswa_aktif_program_studi_s_1_teknik_informatika_selalu_termotivasi_untuk_mencoba_hal_baru_berpikir_kritis_dan_kreatif_serta_memiliki_kemampuan_untuk_berkomunikasi_dengan_baik"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/cekAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lihat_alamat_detail"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:onClick="showMap"
            tools:ignore="UsingOnClickInXml" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/kontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hubungi_saya"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonTelepon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telepon"
            android:onClick="telepon"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/buttonEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:onClick="email"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>
</ScrollView>